--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 	<meta name="pinterest" content="nopin" />
 </head>
 <body>
-	QuickStarter
+	<h1>QuickStarter</h1>
+	<p>A starter for small website that includes LeSS, jQuery, GSAP.</p>
 	
-	<script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
+	<script src="https://cdn.jsdelivr.net/npm/less@3.13"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/gsap.min.js"></script>
 	<script src="js/main.js"></script>
